--- a/deploys/redis-deploy.yml
+++ b/deploys/redis-deploy.yml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: redis
-          image: gcr.io/reference-yen-348420/redis
+          image: redis
           ports:
             - containerPort: 6379
