--- a/deploys/app-deploy.yml
+++ b/deploys/app-deploy.yml
@@ -19,4 +19,4 @@ spec:
             - containerPort: 8000
           env:
             - name: REDIS_HOST
-              value: redis-service.default.svc.cluster.local
+              value: redis-service.deployment-poool.svc.cluster.local
